--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EasyIM</string>
+    <string name="xmAppId">2882303761517964796</string>
+    <string name="xmAppKey">5151796456796</string>
+    <string name="xmCertificateName">xiaomi</string>
 </resources>
